--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 										<div class="text-center" style="padding:0;">
 											<div style="width: 50%; display:inline">
 												<img class="label" src="./images/spotify.png" height="40px" width="100px"/>
-												<img class="label" src="./images/soundcloud.png" height="40px" width="100px"/>
+												<img class="label" src="./images/Soundcloud.png" height="40px" width="100px"/>
 											</div>
 											<div style="width: 50%; display:inline">
 												<img class="label" src="./images/apple music.png" height="40px" width="100px"/>
