--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 									<div class="row">
 										<div class="text-center" style="padding:0;">
 											<div style="width: 50%; display:inline">
-												<img class="label" src="./images/spotify.png" height="40px" width="100px"/>
-												<img class="label" src="./images/Soundcloud.png" height="40px" width="100px"/>
+												<a href="https://open.spotify.com/album/6LDvKjRTNmIEEBQerb2IFj?si=aLPin7IIQ8ayNS5kD5t5lg"><img class="label" src="./images/spotify.png" height="40px" width="100px"/></a>
+												<a href="https://soundcloud.com/512mace/sets/rose-tinted-lenses"><img class="label" src="./images/Soundcloud.png" height="40px" width="100px"/></a>
 											</div>
 											<div style="width: 50%; display:inline">
-												<img class="label" src="./images/apple music.png" height="40px" width="100px"/>
-												<img class="label" src="./images/itunes.png" height="40px" width="100px"/>
+												<a href="https://itunes.apple.com/us/album/rose-tinted-lenses/1378349206"><img class="label" src="./images/apple music.png" height="40px" width="100px"/></a>
+												<a href="https://itunes.apple.com/us/album/rose-tinted-lenses/1378349206"><img class="label" src="./images/itunes.png" height="40px" width="100px"/></a>
 											</div>
 										</div>
 									</div>
